--- a/_config.yml
+++ b/_config.yml
@@ -44,11 +44,11 @@ social:
     # - https://www.facebook.com/username
     - https://www.linkedin.com/in/noahtongate
 
-google_site_verification: google_meta_tag_verification # change to your verification string
+google_site_verification: hc0WsMROlLqBrjOZFEzVWbNtkroIFS0ATmWAsvSWHP8 # change to your verification string
 # --------------------------
 
 google_analytics:
-  id: ''          # Fill with your Google Analytics ID
+  id: 'G-LSK4HZJM17'          # Fill with your Google Analytics ID
   pv:
     # The Google Analytics pageviews switch.
     # DO NOT enable it unless you know how to deploy the Google Analytics superProxy.
